force-app/main/default/objects/Account/fields/Account_News__c.field-meta.xml
<CustomField>
    <fullName>Account_News__c</fullName>
    <label>Account News (EAC)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>