force-app/main/default/objects/Account/fields/Account_News_Query__c.field-meta.xml
<CustomField>
    <fullName>Account_News_Query__c</fullName>
    <label>Account News Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>