force-app/main/default/objects/Account/fields/BusinessRole__c.field-meta.xml
<CustomField>
    <fullName>BusinessRole__c</fullName>
    <description>Business role on the account. Supports customer and supplier dual-role modeling.</description>
    <inlineHelpText>Select one or more business roles. Use Supplier when this account is an upstream supplier. Use Customer when this account is a sell-side customer account.</inlineHelpText>
    <label>Business Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>