force-app/main/default/objects/Account/fields/BusinessRoleHasCustomer__c.field-meta.xml
<CustomField>
    <fullName>BusinessRoleHasCustomer__c</fullName>
    <description>Compatibility formula used by page visibility to detect Customer role from BusinessRole__c.</description>
    <formula>INCLUDES(BusinessRole__c, &quot;Customer&quot;)</formula>
    <label>Business Role Has Customer</label>
    <type>Checkbox</type>
</CustomField>