force-app/main/default/objects/Account/fields/BusinessRoleHasSupplier__c.field-meta.xml
<CustomField>
    <fullName>BusinessRoleHasSupplier__c</fullName>
    <description>Compatibility formula used by page visibility to detect Supplier role from BusinessRole__c.</description>
    <formula>INCLUDES(BusinessRole__c, &quot;Supplier&quot;)</formula>
    <label>Business Role Has Supplier</label>
    <type>Checkbox</type>
</CustomField>