force-app/main/default/objects/Account/fields/CM_Account_Roles__c.field-meta.xml
<CustomField>
    <fullName>CM_Account_Roles__c</fullName>
    <description>Identity roles used by demo assets and identity banners.</description>
    <inlineHelpText>Select one or more identity roles for this Account.</inlineHelpText>
    <label>CM Account Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>