force-app/main/default/objects/Account/fields/CM_Is_Demo_Target__c.field-meta.xml
<CustomField>
    <fullName>CM_Is_Demo_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the Account currently used as the active demo target.</description>
    <inlineHelpText>Use the Demo Target Setup component to switch the active demo target account.</inlineHelpText>
    <label>CM Demo Target</label>
    <type>Checkbox</type>
</CustomField>