force-app/main/default/objects/Account/fields/CM_LatestUpdate__c.field-meta.xml
<CustomField>
    <fullName>CM_LatestUpdate__c</fullName>
    <label>Latest Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>