force-app/main/default/objects/Account/fields/CM_SupplierFactoryCount__c.field-meta.xml
<CustomField>
    <fullName>CM_SupplierFactoryCount__c</fullName>
    <description>Approximate number of manufacturing factories operated by the supplier.</description>
    <inlineHelpText>Use an approximate current count of operating supplier factories.</inlineHelpText>
    <label>Supplier Factory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>