force-app/main/default/objects/Account/fields/CM_SupplierMainProducts__c.field-meta.xml
<CustomField>
    <fullName>CM_SupplierMainProducts__c</fullName>
    <description>Primary products manufactured or supplied by the supplier account.</description>
    <inlineHelpText>List the supplier&apos;s main products or product families.</inlineHelpText>
    <label>Primary Manufactured Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>