force-app/main/default/objects/Account/fields/CM_SupplierRatingGrade__c.field-meta.xml
<CustomField>
    <fullName>CM_SupplierRatingGrade__c</fullName>
    <description>Internal supplier evaluation grade.</description>
    <inlineHelpText>Internal supplier evaluation grade used by the business team.</inlineHelpText>
    <label>Supplier Rating Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>