force-app/main/default/objects/Account/fields/CM_SupplierRDHeadcount__c.field-meta.xml
<CustomField>
    <fullName>CM_SupplierRDHeadcount__c</fullName>
    <description>Approximate number of R&amp;D employees for the supplier account.</description>
    <inlineHelpText>Use an approximate current R&amp;D employee count.</inlineHelpText>
    <label>Supplier R&amp;D Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>