force-app/main/default/objects/Account/fields/CM_Supply_Network_Prompt_JSON__c.field-meta.xml
<CustomField>
    <fullName>CM_Supply_Network_Prompt_JSON__c</fullName>
    <label>CM Supply Network Prompt JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>