force-app/main/default/objects/Account/fields/CM_Supply_Scenario_Catalog__c.field-meta.xml
<CustomField>
    <fullName>CM_Supply_Scenario_Catalog__c</fullName>
    <label>CM Supply Scenario Catalog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>