force-app/main/default/objects/Account/fields/Related_News__c.field-meta.xml
<CustomField>
    <fullName>Related_News__c</fullName>
    <label>Related News</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>