force-app/main/default/objects/Account/fields/Related_News_Query__c.field-meta.xml
<CustomField>
    <fullName>Related_News_Query__c</fullName>
    <label>Related News Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>