force-app/main/default/objects/Account/recordTypes/SDO_Account_Simple.recordType-meta.xml
<RecordType>
    <fullName>SDO_Account_Simple</fullName>
    <active>true</active>
    <description>Primary Account record type used for most account records.</description>
    <label>Account</label>
</RecordType>