force-app/main/default/objects/Account/listViews/AllCompanyAccountsNeedingOutreach.listView-meta.xml
<ListView>
    <fullName>AllCompanyAccountsNeedingOutreach</fullName>
    <booleanFilter>(1 AND 2 AND 3) OR 4 Or 5</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>SDO_Sales_Rating_Indicator__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SDO_Account_Simple</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>PortalAccount,CCAnonymous</value>
    </filters>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>N_WEEKS_AGO:2</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Omega,Inc.</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Quincy</value>
    </filters>
    <label>Accounts Needing Outreach</label>
</ListView>